Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectUndefinedField.quorum
class Main
    Object v = undefined
    action Main
        Test(v)
    end

    action Test(Object var)
        if var = undefined
            output "passed"
        end
    end
end
