Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(integer var)
    end
end
